Details
Description
How to reproduce:
- Open Notepad
- Make sure you disabled word wrapping (it usually disabled by default)
- Type in very long string to activate horizontal scroll bar
- Make a new string (hit Enter)
Now your caret position would be somewhere at the beginning of line 2, but the whole text box is not scrolled to the first character position, and horizontal scroll bar position is not changed (see attached screenshot).
If you move your caret back to line 1 ending, and move with arrow keys to line 2, the bug will appear again (it does not matter whether right or down arrow key will be used).
If you write at least one character at line 2, the bug could not be reproduced.
I've also checked ReactOS Notepad on Windows, and couldn't reproduce the bug here, so the notepad is not guilty.
Also don't know whether it's a regression, feel free to test old revisions. ![]()
Attachments
Issue Links
- blocks
-
CORE-5648 GUI perception problems
-
- Open
-
- relates to
-
CORE-11475 Typed characters aren't always visible in edit controls
-
- Resolved
-