[COMCTL32] Edit: Fix caret and scroll position

Based on patch by JIRA contributor 'I_Kill_Bugs'. CORE-15780